--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <button onclick="playVsCpu()" class="robot">Play vs Robot</button> 
    </div>
    <footer>
-   <a class="autor" href="https://github.com/geromtz" target="_blank">Gerónimo Martinez <span id="year"></span></a>
+   <a class="autor" href="https://geromtz.github.io/tictactoe/" target="_blank">Gerónimo Martinez <span id="year"></span></a>
     </footer>
    </main>
     <script src="./assets/js/app.js"></script>
